--- a/ML_20th_Century.ipynb
+++ b/ML_20th_Century.ipynb
@@ -1720,7 +1720,7 @@
     "# Turn warnings back on again\n",
     "warnings.filterwarnings('always')\n",
     "def rep_latex():\n",
-    "    return best_features.style.to_latex() #(convert_css=True)\n",
+    "    return best_features.style.to_latex(convert_css=True)\n",
     "best_features._repr_latex_ = rep_latex\n",
     "\n",
     "best_features"
