added env + minor grammar tweaks

--- a/stories/2022-09-21-wastewater-cov19/wastewater.ipynb
+++ b/stories/2022-09-21-wastewater-cov19/wastewater.ipynb
@@ -11,7 +11,9 @@
     "research into determining that [cholera outbreaks](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7150208/) could be traced to a particular\n",
     "source. Discoveries such as this led to not only a focus on [treating and\n",
     "cleaning](https://doi.org/10.2166/wst.2012.144) our water, but also to water being recognised as a valuable data source for disease\n",
-    "monitoring. \n",
+    "monitoring. For example, there has been a lot of interest aimed towards\n",
+    "inferring COVID-19 prevalence (i.e., number of positive cases in the general\n",
+    "population) [from wastewater sources.](https://www.sciencedirect.com/science/article/pii/S2468584420300404)\n",
     "\n",
     "Using water-services to determine diseases has two primary benefits over\n",
     "targeted testing mechanisms:\n",
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'area'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/f4/m42_v8vj1fjc0wrwtb69xjt80000gr/T/ipykernel_6077/1659222584.py\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mglob\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0marea\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0marea\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdates\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmdates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_objects\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'area'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
@@ -225,7 +239,7 @@
     "whereas for each region there are only 9 distinct groups to consider. Where each\n",
     "region has between 8 and 47 sites.\n",
     "\n",
-    "For initial analysis we will look at this at the highest level - per region.\n",
+    "For initial analysis we will look at this at the highest level — per region.\n",
     "Choosing to analyse at the region level will simplify our investigation. This\n",
     "will give a general insight into the relationship between wastewater COVID RNA\n",
     "levels and case numbers. \n",
@@ -1567,7 +1581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
