Add links to sections

--- a/stories/2022-10-06-Boris-Bikes/Boris-Bikes.ipynb
+++ b/stories/2022-10-06-Boris-Bikes/Boris-Bikes.ipynb
@@ -105,9 +105,13 @@
     "\n",
     "[TODO Add outline/table of contents, with links to the various sections?]\n",
     "\n",
-    "## Table of Content\n",
+    "## Table of Contents\n",
     "\n",
-    "* [Data description](#data-description)"
+    "* [Data description](#data-description)\n",
+    "* [Statistics on bike usage](#statistics)\n",
+    "* [A day in the life of a bike](#day)\n",
+    "* [Bike mobility patterns](#mobility)\n",
+    "* [Conclusions](#conclusions)"
    ]
   },
   {
@@ -129,12 +133,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4751f8ed",
    "metadata": {},
    "source": [
-    "\n",
-    "# Data processing and cleaning\n",
+    "## Data processing and cleaning\n",
     "\n",
     "The data covers a wide time range, and the format has seen several small changes in that period. Consequently having a single table with all the journey data requires a bit of cleaning, harmonising, and general data-massaging. Some examples of the kinds of things one needs to deal with are\n",
     "* Data files are provided at the weekly level and need to be downloaded programatically from the TfL web page,\n",
@@ -307,11 +311,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5be89889",
    "metadata": {},
    "source": [
-    "# Statistics on bike usage"
+    "# Statistics on bike usage <a class=\"anchor\" id=\"statistics\"></a>"
    ]
   },
   {
@@ -834,11 +839,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a07635d",
    "metadata": {},
    "source": [
-    "# A day on the life of a bike\n",
+    "# A day in the life of a bike <a class=\"anchor\" id=\"day\"></a>\n",
     "\n",
     "\n",
     "Now that we have \"chains\" associated to our long lived bikes we can use them to follow them around on a given time period. We are interested to how they move around the city. \n",
@@ -1207,11 +1213,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "87c46d66",
    "metadata": {},
    "source": [
-    "# Bike mobility patterns\n",
+    "# Bike mobility patterns <a class=\"anchor\" id=\"mobility\"></a>\n",
     "\n",
     "The patterns of mobility observed in this dataset can be abstracted using networks built from trips between stations.\n",
     "\n",
@@ -1652,11 +1659,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7f4d260a",
    "metadata": {},
    "source": [
-    "# Conclusion\n",
+    "# Conclusions <a class=\"anchor\" id=\"conclusions\"></a>\n",
     "\n",
     "In this Turing data story we aimed to use the TfL bike journey dataset to understand the usage of Boris Bikes and how it has changed, as well as the patterns in how people move around the capital. This story was born out of a 'Hack week' organised by the [Research Engineering Group](https://www.turing.ac.uk/research-engineering) at the Turing, an annual event in which people from the team get to work on projects/datasets they find interesting. \n",
     "\n",
