OWL: Add some hyperlinks

--- a/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
+++ b/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
@@ -46,11 +46,11 @@
    "source": [
     "## Overwatch League (OWL)\n",
     "\n",
-    "Overwatch is an online team-based multiplayer first-person shooter (FPS) game developed and published by Blizzard Entertainment. It features different modes designed around combat between two opposing teams of six players each. It was first released in 2016 and has been highly popular among casual players, selling over 50 million copies, and as a professional esport.\n",
+    "[Overwatch](https://en.wikipedia.org/wiki/Overwatch_(video_game)) is an online team-based multiplayer first-person shooter (FPS) game developed and published by Blizzard Entertainment. It features different modes designed around combat between two opposing teams of six players each. It was first released in 2016 and has been highly popular among casual players, selling over 50 million copies, and as a professional esport.\n",
     "\n",
     "Matches between two teams consist of several games and each game is played on one of 21 possible maps. There are four different types of maps with varying objectives, such as controlling key locations on the map or capturing them from the opponent. Each match includes games with different map types, and typically the losing team gets to choose the next map. An individual game may further subdivide into rounds, depending on the map type. A game ends in a victory for one of the two teams or a draw.\n",
     "\n",
-    "The Overwatch League (OWL) is the highest professional esports league for Overwatch, and is owned and run by Blizzard Entertainment. The 2021 OWL featured four midseason tournaments throughout the regular season which used a point system for season playoff seeding. OWL 2021 consisted of 20 teams split into two geographical regions: North America (NA) and Asia (APAC).\n",
+    "[The Overwatch League](https://overwatchleague.com/en-gb) (OWL) is the highest professional esports league for Overwatch, and is owned and run by Blizzard Entertainment. The 2021 OWL featured four midseason tournaments throughout the regular season which used a point system for season playoff seeding. OWL 2021 consisted of 20 teams split into two geographical regions: North America (NA) and Asia (APAC).\n",
     "\n"
    ]
   },
@@ -3387,7 +3387,7 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "<img src=\"blizzcon2019_player.jpg\" width=\"800\">\n",
+    "<img src=\"blizzcon2019_player.jpg\" width=\"700\">\n",
     "</div>"
    ]
   },
