OWL: Add docstrings.

--- a/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
+++ b/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
@@ -1508,6 +1508,7 @@
    ],
    "source": [
     "def map_data(team_list, map_list, df):\n",
+    "    \"\"\"Collect stats on wins, losses, and draws per map and per team.\"\"\"\n",
     "    # make dataframe\n",
     "    column_names = (\"team_name\", \"map\", \"win_%\", \"win\", \"draw\", \"lose\")\n",
     "    team_map_data_df = pd.DataFrame(columns=column_names)\n",
@@ -1576,6 +1577,7 @@
    ],
    "source": [
     "def plot_win_rate_distribution(owl21_reduced, all_teams_map_data, min_games=4):\n",
+    "    \"\"\"Plot a heatmap of win rates by team and map.\"\"\"\n",
     "    filtered_all_teams_map_data = all_teams_map_data.copy()\n",
     "    filtered_all_teams_map_data[\"win_%\"] = filtered_all_teams_map_data[\"win_%\"].where(\n",
     "        all_teams_map_data[\"games_played\"] >= min_games, np.nan\n",
@@ -1768,6 +1770,7 @@
    "outputs": [],
    "source": [
     "def _get_model_rate(model, actual_winners, predictors):\n",
+    "    \"\"\"Compute the success rate of a predictor model.\"\"\"\n",
     "    predicted_results = model.predict(predictors)\n",
     "    predicted_winners = predicted_results.loc[:, \"map_winner\"]\n",
     "    correct_predictions = (predicted_winners == actual_winners).sum()\n",
@@ -2419,6 +2422,7 @@
     "\n",
     "\n",
     "def rolling_map_rates(df_full, team_names, map_names):\n",
+    "    \"\"\"Make a dataframe of rolling per map, per team win rates.\"\"\"\n",
     "    columns_to_copy = [\n",
     "        \"match_id\",\n",
     "        \"map_name\",\n",
@@ -2597,6 +2601,10 @@
    "outputs": [],
    "source": [
     "def train_and_test_bootstrap(train_data, test_data, model_class, k=50):\n",
+    "    \"\"\"Bootstrap k samples of test data, and test the trained model on them.\n",
+    "    \n",
+    "    Return descriptive statistics of accuracy over the sampled test sets.\n",
+    "    \"\"\"\n",
     "    results = [\n",
     "        train_and_test(\n",
     "            train_data, test_data.sample(frac=1.0, replace=True), model_class\n",
@@ -3425,6 +3433,7 @@
    "outputs": [],
    "source": [
     "def combine_elo_and_maprates(df_elo, df_maprates, team_names, map_names):\n",
+    "    \"\"\"Combine rolling Elo and rolling map win rates into a single dataframe.\"\"\"\n",
     "    team_map_pairs = list(itertools.product(team_names, map_names, [\"wins\", \"losses\"]))\n",
     "    df_maprates = df_maprates[team_map_pairs + [\"team_one_winrate\", \"team_two_winrate\"]]\n",
     "    df_elo_maprates = pd.concat(\n",
@@ -3443,6 +3452,7 @@
    "outputs": [],
    "source": [
     "def encode_map_winner(df):\n",
+    "    \"\"\"Encode game outcome as +1, 0, -1.\"\"\"\n",
     "    team1 = df[\"team_one_name\"]\n",
     "    team2 = df[\"team_two_name\"]\n",
     "    winner = df[\"map_winner\"]\n",
