OWL: More small changes after review feedback

--- a/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
+++ b/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
@@ -26,16 +26,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div>\n",
-    "<img src=\"owl_logo.png\" width=\"600\">\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Overwatch League Logo courtesy of Blizzard Entertainment."
+    "|<div><img src=\"owl_logo.png\" width=\"600\"></div>|\n",
+    "|:-:| \n",
+    "| Overwatch League Logo courtesy of Blizzard Entertainment.|"
    ]
   },
   {
@@ -58,16 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div>\n",
-    "<img src=\"gameplay01.jpg\" width=\"800\">\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Overwatch gameplay from the player's point of view. Image credit Blizzard Entertainment."
+    "|<div><img src=\"gameplay01.jpg\" width=\"800\"></div>|\n",
+    "|:-:| \n",
+    "| Overwatch gameplay from the player's point of view. Image credit Blizzard Entertainment. |"
    ]
   },
   {
@@ -1619,16 +1605,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div>\n",
-    "<img src=\"templeofanubis_anno_1024.png\" width=\"600\">\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A top-down schematic of one of the most popular maps, Temple of Anubis. This is an Assault type map, where the attacking team starts at the bottom right and tries to capture the two capture points, A and B, from the defenders. Image made by [statbanana](https://statbanana.com/images)."
+    "|<div><img src=\"templeofanubis_anno_1024.png\" width=\"600\"></div>|\n",
+    "|:-:| \n",
+    "| A top-down schematic of one of the most popular maps, Temple of Anubis. This is an Assault type map, where the attacking team starts at the bottom right and tries to capture the two capture points, A and B, from the defenders. Image made by [statbanana](https://statbanana.com/images). |"
    ]
   },
   {
@@ -2687,16 +2666,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div>\n",
-    "<img src=\"gameplay03.jpg\" width=\"800\">\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Overwatch players can choose from many characters, called heroes, with different abilities. We don't use any data specific to choices of heroes, nor do we use information particular to the different game modes, but simply focus on the question of which team won against which team on which map. Image credit Blizzard Entertainment."
+    "|<div><img src=\"gameplay03.jpg\" width=\"800\"></div>|\n",
+    "| :--: |\n",
+    "| Overwatch players can choose from many characters, called heroes, with different abilities. We don't use any data specific to choices of heroes, nor do we use information particular to the different game modes, but simply focus on the question of which team won against which team on which map. Image credit Blizzard Entertainment. |"
    ]
   },
   {
@@ -3387,23 +3359,16 @@
    "source": [
     "This model clearly outperforms the earlier map win rate based model, reaching an accuracy roughly between 59% and 65%.\n",
     "\n",
-    "As an aside, we tried varying the k parameter for the Elo system, and couldn't find a value that would have significantly improved the accuracy we see here. We leave this analysis out of the story, for brevity."
+    "As an aside, we tried varying the $k$ parameter for the Elo system, and couldn't find a value that would have significantly improved the accuracy we see here. We leave this analysis out of the story, for brevity."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div>\n",
-    "<img src=\"blizzcon2019_player.jpg\" width=\"700\">\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Professional Overwatch players in a tournament. We model skill using Elo ratings on the level of teams, not individual players. Image credit Blizzard Entertainment."
+    "| <div><img src=\"blizzcon2019_player.jpg\" width=\"700\"></div> |\n",
+    "| :--: |\n",
+    "| Professional Overwatch players in a tournament. We model skill using Elo ratings on the level of teams, not individual players. Image credit Blizzard Entertainment. |"
    ]
   },
   {
@@ -3608,13 +3573,6 @@
     "\n",
     "The most interesting future exploration would be to move from the team-level to the player-level, and try to model the skill levels of the individuals that make up the teams. This would open whole new possibilities of using data from multiple seasons and tracking players across them as they may change teams. This would also enable us to for instance predict the performance of a rebuilt team at the beginning of a season based on who they've added to their roster, or model which teams seem to perform as more or less than the sum of their parts. That, though, is all work for another data story."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
