Add sentence noting the lack of data license

--- a/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
+++ b/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
@@ -117,7 +117,7 @@
     "\n",
     "### Data source\n",
     "\n",
-    "The official OWL website includes a stats tab that contains various data on players, heroes (characters players can choose), and matches. For this analysis, we will be using the [match data](https://overwatchleague.com/en-us/statslab) as it includes the results of match ups between different teams in the league."
+    "The official OWL website includes a stats tab that contains various data on players, heroes (characters players can choose), and matches. For this analysis, we will be using the [match data](https://overwatchleague.com/en-us/statslab) as it includes the results of match ups between different teams in the league. Blizzard provides the data for anyone to analyse, but unfortunately it does not come with an explicit free data license that would allow us to redistribute it."
    ]
   },
   {
