--- a/stories/2021-07-21-Baseball-Replacement-Level/2021-07-21-Baseball-Replacement-Level.ipynb
+++ b/stories/2021-07-21-Baseball-Replacement-Level/2021-07-21-Baseball-Replacement-Level.ipynb
@@ -2,27 +2,43 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "compatible-validation",
+   "id": "moderate-universe",
    "metadata": {},
    "source": [
     "# French Pastries, Baseball Players, and Marginal Utility\n",
     "\n",
-    "**Author:** Eric Daub, Alan Turing Institute (Github: @edaub)\n",
+    "> Understanding and estimating the replacement value of US baseball players with Bayesian models.\n",
     "\n",
-    "**Reviewers:** Jack Roberts, Alan Turing Institute (Github: @jack89roberts)\\\n",
-    "Nick Barlow, Alan Turing Institute (Github: @nbarlowATI)\n",
+    "\n",
+    "- toc: false\n",
+    "- categories: [Baseball, Bayesian modeling, SQL]\n",
+    "- author: Eric Daub\n",
+    "- image: images/story_previews/2021-07-21-Baseball-Replacement-Level.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compatible-validation",
+   "metadata": {},
+   "source": [
+    "**Author:** \n",
+    "- Eric Daub, Alan Turing Institute (Github: @edaub)\n",
+    "\n",
+    "**Reviewers:** \n",
+    "- Jack Roberts, Alan Turing Institute (Github: @jack89roberts)\n",
+    "- Nick Barlow, Alan Turing Institute (Github: @nbarlowATI)\n",
     "\n",
     "## Introduction\n",
     "\n",
     "I was recently chatting with a friend about the respective merits of the French pastries available at our local bakery:\n",
     "\n",
-    "**Friend:** What do you think of the pastries? Are they good?\\\n",
-    "**Me:** Yes, though there is another bakery further out of town that I prefer.\\\n",
-    "**Friend:** You don't think these are as good?\\\n",
-    "**Me:** No, but not so much worse that I'd walk a half hour each way to get those since I don't have a car. They are definitely better than the ones you get at Pret A Manger which you can find in every train station and city center, so definitely well above a replacement level crossaint.\\\n",
-    "**Friend:** What do you mean by that, replacement level?\\\n",
-    "**Me:** Oh, it's a term that baseball statisticians use to measure if it's worth paying money for a particular player. The idea is to come up with some baseline that's easily available, and then try to determine how much better something is than that. Economists call this \"Marginal Utility.\"\\\n",
-    "**Friend:** [Silence]\\\n",
+    "**Friend:** What do you think of the pastries? Are they good?  \n",
+    "**Me:** Yes, though there is another bakery further out of town that I prefer.  \n",
+    "**Friend:** You don't think these are as good?  \n",
+    "**Me:** No, but not so much worse that I'd walk a half hour each way to get those since I don't have a car. They are definitely better than the ones you get at Pret A Manger which you can find in every train station and city center, so definitely well above a replacement level crossaint.  \n",
+    "**Friend:** What do you mean by that, replacement level?  \n",
+    "**Me:** Oh, it's a term that baseball statisticians use to measure if it's worth paying money for a particular player. The idea is to come up with some baseline that's easily available, and then try to determine how much better something is than that. Economists call this \"Marginal Utility.\"  \n",
+    "**Friend:** [Silence]  \n",
     "**Me:** [To myself] Did I really just say \"replacement level crossaint?\"\n",
     "\n",
     "While I took a course in Economics when I was an undergraduate, I definitely did not completely understand the concept of Marginal Utility until I started reading more about baseball statistics (no doubt beginning with my dog-eared copy of [*Moneyball* by Michael Lewis](https://en.wikipedia.org/wiki/Moneyball)). The idea is that to compare two goods that have different prices, I need to determine how much additional value I get out of the more expensive one to justify the extra expense. Regarding crossaints, the extra cost of the better bakery was my time, which I determined would be better spent doing something else and thus the marginal utility of the fancier bakery was not worth it.\n",
@@ -1452,7 +1468,38 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.9"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
