some updates to quarto style

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,4 @@
 ---
-title: "Turing Data Stories"
 listing:
   contents: stories 
   sort: "date desc"
@@ -8,7 +7,12 @@ listing:
   sort-ui: false
   filter-ui: false
 page-layout: full
-title-block-banner: true
+title-block-banner: false
 ---
 
+[![](images/TDS-logo-wide.png){fig-alt="Turing Data Stories Logo"}](https://github.com/alan-turing-institute/TuringDataStories)
 
+An open community creating “Data Stories”: A mix of open data, code, narrative 💬, visuals 📊📈 and knowledge 🧠 to help understand the world around us. 
+Want to contribute? Take a look [here](https://github.com/alan-turing-institute/TuringDataStories#contributing).
+
+# Posts
