--- a/stories/TDS-template.ipynb
+++ b/stories/TDS-template.ipynb
@@ -5,15 +5,28 @@
    "id": "collective-kinase",
    "metadata": {},
    "source": [
-    "# Insert TItle!\n",
-    "\n",
-    "\n",
-    "> tagline: a short 1-2 sentence abstract for the story\n",
-    "\n",
-    "- toc: false\n",
-    "- categories: [list, of, tags] (see previously used tags [here](https://alan-turing-institute.github.io/TuringDataStories-fastpages/categories/))\n",
-    "- author(s): list authors\n",
-    "- image: images/story_previews/<file here>"
+    "---\n",
+    "title: Your cool title here\n",
+    "date: '2022-03-09'  # Placeholder date\n",
+    "author:\n",
+    "- name: Your Name\n",
+    "  url: e.g. https://www.turing.ac.uk/people/research-engineering/your-name\n",
+    "  affiliation: \n",
+    "    - name: e.g. The Alan Turing Institute\n",
+    "- name: Your Co-Author\n",
+    "  url: e.g. https://www.turing.ac.uk/people/research-engineering/your-co-author\n",
+    "  affiliation: \n",
+    "    - name: e.g. The Alan Turing Institute\n",
+    "    - name: second affiliation, e.g. University College London\n",
+    "abstract: As the iconic BBC radio programme turns 80, we explore notable people and the music that tells the stories of their lives.\n",
+    "keywords:\n",
+    "- data exploration\n",
+    "- data wrangling\n",
+    "- data visualisation\n",
+    "- digital humanities\n",
+    "categories: [list, of, tags] (see previously used tags [here](https://alan-turing-institute.github.io/TuringDataStories-fastpages/categories/))\n",
+    "license: CC BY  # Placeholder license\n",
+    "---"
    ]
   },
   {
@@ -21,11 +34,9 @@
    "id": "wireless-vinyl",
    "metadata": {},
    "source": [
-    "**Authors:**\n",
-    "- List\n",
-    "- authors\n",
     "\n",
-    "**Reviewers:**\n",
+    "\n",
+    "### Reviewers\n",
     "- Reviewer 1\n",
     "- Reviewer 2"
    ]
