--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ page-layout: full
 title-block-banner: false
 ---
 
-[![](images/TDS-logo-wide.png){fig-alt="Turing Data Stories Logo"}](https://github.com/alan-turing-institute/TuringDataStories)
+[![](logos/TDS-logo-wide.png){fig-alt="Turing Data Stories Logo"}](https://github.com/alan-turing-institute/TuringDataStories)
 
 An open community creating “Data Stories”: A mix of open data, code, narrative 💬, visuals 📊📈 and knowledge 🧠 to help understand the world around us. 
 Want to contribute? Take a look [here](https://github.com/alan-turing-institute/TuringDataStories#contributing).
