Respond to more review feedback

--- a/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
+++ b/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
@@ -77,32 +77,32 @@
    "source": [
     "## Outline\n",
     "\n",
-    "The story divides into the following parts.\n",
+    "The story is divided into the following parts.\n",
     "\n",
-    "- [Part 1. Data ingestion](#scrollTo=y4Cnt1XoDTVF&line=2&uniqifier=1)\n",
+    "- [Part 1. Data ingestion](#part_data_ingestion)\n",
     "  - Getting the source data\n",
     "\n",
-    "- [Part 2. Data cleaning](#scrollTo=7rhbsSHoHlSn&line=1&uniqifier=1)\n",
+    "- [Part 2. Data cleaning](#part_data_cleaning)\n",
     "  - Refining and filtering the data to the scope of our analysis\n",
     "\n",
-    "- [Part 3. Initial data exploration](#scrollTo=wb_NCIQJI9xz&line=1&uniqifier=1)\n",
+    "- [Part 3. Initial data exploration](#part_initial_data_exploration)\n",
     "  - Teams' win rates per map\n",
     "  - Visualisation\n",
     "  - Teams' records against each other per map\n",
     "\n",
-    "- [Part 4. A benchmark predictor](#scrollTo=JupHOOJ1NUUF&line=1&uniqifier=1)\n",
+    "- [Part 4. A benchmark predictor](#part_a_benchmark_predictor)\n",
     "  - The pure guess predictor\n",
     "  - A framework for training and testing models\n",
     "\n",
-    "- [Part 5. Higher win rate predictor](#scrollTo=KGjg51ytQvQv&line=1&uniqifier=1)\n",
+    "- [Part 5. Higher win rate predictor](#part_higher_win_rate_predictor)\n",
     "  - Predicting winners based on past history on the given map\n",
     "\n",
-    "- [Part 6. Skill based predictor - Elo ratings](#scrollTo=wWxuO8QtkTu9&line=3&uniqifier=1)\n",
+    "- [Part 6. Skill based predictor - Elo ratings](#part_elo)\n",
     "  - The Elo rating system\n",
     "  - Predicting winners based on Elo ratings\n",
     "  - Combining Elo ratings and map win rates for better predictions?\n",
     "\n",
-    "- [Part 7. Conclusions](https://colab.research.google.com/drive/1niVhOprEyj1moSCP-AV9FKTXX5eA6Ge8#scrollTo=VLM2RBNc2jJ1&line=1&uniqifier=1)\n",
+    "- [Part 7. Conclusions](#part_conclusions)\n",
     "  - What we learned\n",
     "  - What we would like to do in the future"
    ]
@@ -113,6 +113,7 @@
     "id": "y4Cnt1XoDTVF"
    },
    "source": [
+    "<a id='part_data_ingestion'></a>\n",
     "# Part 1. Data ingestion\n",
     "\n",
     "### Data source\n",
@@ -136,7 +137,7 @@
     "id": "ns8rb165lU-A"
    },
    "source": [
-    "We start by importing all packages we'll need in the whole story. This includes some standard Python libraries to do the following:\n",
+    "We start by importing all packages we'll need in the whole story. This includes some common Python libraries to do the following:\n",
     "- data manipulation (pandas, numpy)\n",
     "- data extraction (zipfile, requests)\n",
     "- data visualisation (pyplot, seaborn)\n",
@@ -174,7 +175,7 @@
     "id": "rPQ7A8fvmGR8"
    },
    "source": [
-    "We download a zip file containing all of the match data over the last few years, and then ingest this as a pandas dataframe, the standard python object for holding tabular data, provided by the pandas data science package."
+    "We download a zip file containing all of the match data over the last few years, and then ingest this as a pandas dataframe, the usual python object for holding tabular data, provided by the pandas data science package."
    ]
   },
   {
@@ -662,6 +663,7 @@
     "id": "7rhbsSHoHlSn"
    },
    "source": [
+    "<a id='part_data_cleaning'></a>\n",
     "# Part 2. Data cleaning\n",
     "\n",
     "Next we reduce the data to only the information that we need."
@@ -1201,6 +1203,7 @@
     "id": "wb_NCIQJI9xz"
    },
    "source": [
+    "<a id='part_initial_data_exploration'></a>\n",
     "# Part 3. Initial data exploration\n",
     "\n",
     "Our eventual goal is to predict the outcomes of future games based on past history of the teams involved. For example, a predictor should be able to use information from the first 200 games to predict the result of the 201st game.\n",
@@ -1511,10 +1514,10 @@
     "            # calculate data and add to list\n",
     "            num_win = (team_map_df.map_winner == team).sum()\n",
     "            num_lose = (team_map_df.map_loser == team).sum()\n",
-    "            num_total = len(team_map_df.index)\n",
+    "            num_total = len(team_map_df)\n",
     "            num_draw = num_total - num_win - num_lose\n",
-    "            win_perc = num_win / num_total if num_total > 0 else np.nan\n",
-    "            map_data_list = [team, map_name, round(win_perc, 4), num_win, num_draw, num_lose]\n",
+    "            win_rate = num_win / num_total if num_total > 0 else np.nan\n",
+    "            map_data_list = [team, map_name, round(win_rate, 4), num_win, num_draw, num_lose]\n",
     "\n",
     "            # append data list to dataframe\n",
     "            team_map_data_df.loc[len(team_map_data_df)] = map_data_list\n",
@@ -1569,6 +1572,8 @@
     "        all_teams_map_data[\"games_played\"] >= min_games, np.nan\n",
     "    )\n",
     "    # Visualise win rates of teams vs maps\n",
+    "    # The pivot call turns the values in the map column into individual\n",
+    "    # columns, one for each map.\n",
     "    team_map_matrix = filtered_all_teams_map_data.set_index(\"team_name\").pivot(\n",
     "        columns=\"map\"\n",
     "    )[\"win_%\"]\n",
@@ -1608,6 +1613,15 @@
     "|<div><img src=\"templeofanubis_anno_1024.png\" width=\"600\"></div>|\n",
     "|:-:| \n",
     "| A top-down schematic of one of the most popular maps, Temple of Anubis. This is an Assault type map, where the attacking team starts at the bottom right and tries to capture the two capture points, A and B, from the defenders. Image made by [statbanana](https://statbanana.com/images). |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "1XiKBeo2LLDT"
+   },
+   "source": [
+    "If you're curious about a particular team's performance, you can use the below widget to browse how they did on each map."
    ]
   },
   {
@@ -1661,7 +1675,8 @@
    "source": [
     "out = widgets.Output()\n",
     "\n",
-    "\n",
+    "# See https://ipywidgets.readthedocs.io/en/latest/\n",
+    "# for what widgets are.\n",
     "def on_team_selection(change):\n",
     "    with out:\n",
     "        clear_output()\n",
@@ -1681,18 +1696,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "1XiKBeo2LLDT"
-   },
-   "source": [
-    "If you're curious about a particular team's performance, you can use the above widget to browse how they did on each map."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "JupHOOJ1NUUF"
    },
    "source": [
+    "<a id='part_a_benchmark_predictor'></a>\n",
     "# Part 4. A benchmark predictor"
    ]
   },
@@ -1897,6 +1904,7 @@
     "id": "KGjg51ytQvQv"
    },
    "source": [
+    "<a id='part_higher_win_rate_predictor'></a>\n",
     "# Part 5. Higher win rate predictor"
    ]
   },
@@ -2414,7 +2422,8 @@
     "    N_games = len(df)\n",
     "    # We need a column for each 3-tuple of team, map, and win/loss, counting how many\n",
     "    # times that team has won/lost on that map, up to the point in the season indexed by\n",
-    "    # the rows.\n",
+    "    # the rows. If this seems a bit confusing, seeing what the output looks like below\n",
+    "    # may clarify.\n",
     "    team_map_tuples = list(itertools.product(team_names, map_names, [\"wins\", \"losses\"]))\n",
     "    initial_column = pd.Series([np.nan] * N_games, index=df.index, dtype=np.float_)\n",
     "    initial_column.iloc[0] = 0\n",
@@ -2677,6 +2686,7 @@
     "id": "wWxuO8QtkTu9"
    },
    "source": [
+    "<a id='part_elo'></a>\n",
     "# Part 6. Skill based predictor - Elo ratings\n",
     "\n",
     "The map win rate predictor may have been a bit better than random guessing, but it certainly isn't blowing our socks off. Let's now try something more interesting.\n",
@@ -3483,6 +3493,8 @@
    "source": [
     "class LinearClassifier:\n",
     "    def __init__(self):\n",
+    "        # See\n",
+    "        # https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeClassifier.html\n",
     "        self.model = linear_model.RidgeClassifier()\n",
     "\n",
     "    def train(self, train_data):\n",
@@ -3552,6 +3564,7 @@
     "id": "VLM2RBNc2jJ1"
    },
    "source": [
+    "<a id='part_conclusions'></a>\n",
     "# Part 7: Conclusions"
    ]
   },
