OWL: Fix header

--- a/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
+++ b/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
@@ -6,27 +6,35 @@
     "id": "nyzGpQqNXQxd"
    },
    "source": [
-    "# Esport predictions: Overwatch League \n",
-    "\n",
-    "We study a single season of games in the professional esports league for Overwatch and try to predict game outcomes based on past performance.\n",
-    "\n",
-    "Authors:\n",
-    "\n",
-    "* Markus Hauru\n",
-    "* Tim Powell\n",
-    "* Kevin Xu\n",
-    "\n",
-    "Reviewers:\n",
-    "\n",
-    "* David Llewellyn-Jones\n",
-    "* Jack Roberts"
+    "---\n",
+    "title: Esport predictions: Overwatch League \n",
+    "date: '2023-10-11'\n",
+    "author:\n",
+    "- name: Markus Hauru\n",
+    "- name: Tim Powell\n",
+    "- name: Kevin Xu\n",
+    "abstract: We study a single season of games in the professional esports league for Overwatch and try to predict game outcomes based on past performance.\n",
+    "keywords:\n",
+    "- data exploration\n",
+    "- data visualisation\n",
+    "- digital humanities\n",
+    "- ELO\n",
+    "- esports\n",
+    "- modelling\n",
+    "- overwatch\n",
+    "- owl\n",
+    "reviewers:\n",
+    "- name: David Llewellyn-Jones\n",
+    "- name: Jack Roberts\n",
+    "license: CC BY\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "|<div><img src=\"owl_logo.png\" width=\"600\"></div>|\n",
+    "|<div><img src=\"preview.png\" width=\"600\"></div>|\n",
     "|:-:| \n",
     "| Overwatch League Logo courtesy of Blizzard Entertainment.|"
    ]
