OWL: Fix header title

--- a/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
+++ b/stories/2023-02-01-Overwatch-League/OWL_story.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "---\n",
-    "title: Esport predictions: Overwatch League \n",
+    "title: 'Esport predictions: Overwatch League'\n",
     "date: '2023-10-11'\n",
     "author:\n",
     "- name: Markus Hauru\n",
